<resources>
    <string name="app_name">SECB</string>

    <string name="hello_world">Hello world!</string>

    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_empty_email">Email address should be entered correctly</string>
    <string name="error_empty_password">Password should be entered correctly</string>
    <string name="error_request_time_out">Timeout, please make sure of your internet connection</string>
    <string name="error_empty_userName">User name should be entered correctly</string>
    <string name="error_empty_mobile">Mobile number should be entered correctly</string>
    <string name="error_empty_organization">Organization number should be entered correctly</string>
    <string name="error_empty_job">Job number should be entered correctly</string>
    <string name="error_empty_subject">Subject number should be entered correctly</string>

    <!--<string name="password_reset_done">Please check your email inbox.</string>-->
    <string name="password_reset_done">Password reset message is sent to %s . Please check your inbox.</string>
    <string name="loading">Loading..</string>
    <string name="wait_moment">Please wait a moment..</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="retry">Retry</string>
    <string name="error_details">Error Details</string>
    <string name="attention">Attention</string>
    <string name="timeout">Request timed out</string>
    <string name="conn_error">Connection error occurred, try again later</string>
    <string name="unhandled_error">Unhandled Error</string>

    <!--Login-->
    <string name="login_forget_pass">Forget Password</string>
    <string name="login_login">Login</string>
    <string name="login_signup">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_">Email Address:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!--sign up-->
    <string name="sign_up_registeration_url">http://secb.linkdev.com/en/Pages/QuickRegistration.aspx</string>
    <string name="lost_connection">The connection is lost !</string>

    <!--reset password-->
    <string name="resetPassword">Reset Password</string>

    <!--menu_layout-->
    <string name="home">Home</string>
    <string name="eservices">E-Services</string>
    <string name="news">News</string>
    <string name="eguide">E-Guide</string>
    <string name="events">Events</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="language">عربي</string>
    <string name="logout">Logout</string>
    <string name="services_requests">Services Requests</string>
    <string name="last_news">Latest News</string>

    <string name="graph_title_closed">
        <![CDATA[<strong>Closed </strong> <br/>Requests]]>
    </string>

    <string name="graph_title_inbox">
        <![CDATA[<strong>Inbox</strong> <br/>Requests]]>
    </string>
    <string name="graph_title_inProgress">
        <![CDATA[<strong>In Progress</strong> <br/>Requests]]>
    </string>
    <string name="view_all_news">View All News</string>
    <string name="filter_type">By Type</string>
    <string name="filter_time">Time</string>
    <string name="filter_time_from">From</string>
    <string name="filter_time_to">To</string>
    <string name="news_filter_all_types">All Types</string>
    <string name="news_filter_economic_type">Economic Type</string>
    <string name="news_filter_political_type">Political Type</string>
    <string name="news_filter_public_type">Public Type</string>
    <string name="filters_apply_filter">Apply Filters</string>
    <string name="filters_clear_filter"><u>Clear Filters</u></string>
    <string name="news_details">News Details</string>
    <string name="filter_city">City</string>
    <string name="filter_time_starts">Starts</string>
    <string name="filter_time_ends">Ends</string>
    <string name="filter_category">Category</string>
    <string name="event_details">Event Details</string>
    <string name="location_eguide">Location E-Guide</string>
    <string name="organizers_eguide">Organizers E-Guide</string>
    <string name="filter_organizer_name">Organizer Name</string>
    <string name="address_">Address:</string>
    <string name="phone">Phone Number</string>
    <string name="phone_">Phone Number:</string>
    <string name="website">Website</string>
    <string name="website_">Website:</string>
    <string name="organizer_details">Organizers Details</string>
    <string name="location_capacityTitle">Capacity:</string>
    <string name="location_spaceTitle">Space:</string>
    <string name="filter_location_name">Location Name</string>
    <string name="filter_total_capacity">Total Capacity</string>
    <string name="location_nameTitle">Name:</string>
    <string name="location_type_title">Type:</string>
    <string name="location_roomType">Room Type</string>
    <string name="location_roomCapacity">Room Capacity</string>
    <string name="location_roomSpace">Room Space</string>
    <string name="location_roomCountTitle">Number of Rooms</string>
    <string name="locationsList">Locations List</string>
    <string name="location_details">Location Details</string>
    <string name="view_all_events">View All Events</string>
    <string name="image_gallery">Images Gallary</string>
    <string name="image_album">Image Album</string>
    <string name="video_album">Videos Album</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="hint_date">The Date</string>
    <string name="hint_city">City</string>
    <string name="hint_name">Name</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="switch_language_confirm">
        <![CDATA[Are you sure you want to <strong>switch language</strong> ?]]>
    </string>
    <string name="logout_confirm">
        <![CDATA[Are you sure you want to <strong>logout</strong> ?]]>
    </string>
    <string name="language_english">English</string>
    <string name="language_arabic">عربي</string>
    <string name="contact_us_form_title">Wish to book an appointment with SECB representatives? \nplease complete the form below:</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_organization">Organization</string>
    <string name="hint_job_title">Job Title</string>
    <string name="hint_subject">Subject</string>
    <string name="send">Send</string>
    <string name="secb_location_address">Temporary SECB headquarters: Riyadh, behind Al Mashreq Boutique Hotel, building #6.</string>
    <string name="secb_email_address">secb-info@scta.gov.sa</string>
    <string name="secb_phone_number">0112834707</string>
    <string name="secb_fax_number">0112834707</string>
    <string name="secb_facebook">http://www.facebook.com</string>
    <string name="secb_twitter">https://twitter.com</string>
    <string name="secb_google">https://plus.google.com</string>
    <string name="secb_linkedIn">https://www.linkedin.com</string>
    <string name="date">Date : </string>
    <string name="status">Status : </string>
    <string name="number">Number :</string>
    <string name="type">Type :</string>

    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="filter_location_type">Location Type</string>
    <string name="vision_title">SECB Vision</string>
    <string name="vision_value">The Saudi Exhibition and Convention Bureau will be a national pilot program which develops the exhibition and convention sector through increased efficiency and effectiveness with the aim of supporting the country’s economy.</string>
    <string name="mission_title">SECB Mission</string>
    <string name="mission_value">The Saudi Exhibition and Convention Bureau will apply sector best practices in overseeing the Saudi exhibition and convention sector, and in developing the related internal and external environments to accomplish positive economic, cultural/social, environmental and political outcomes.</string>

    <string name="dev_name"> Name Name Name Name Name Name Name </string>
    <string name="dev_desc"> Description Description Description Description Description Description </string>
    <string name="dev_address" >Address Address Address Address Address Address Address Address </string>
    <string name="gallery_no_albums">There are no albums.</string>
    <string name="album_no_files">There are no files</string>
    <string name="login_failed">Login failed . Please check the user name and the password</string>
    <string name="news_no_news">There are  no news</string>
    <string name="details_no_details">There are no details</string>
    <string name="news_no_types">There are no types</string>
    <string name="events_no_events">There are no events</string>
    <string name="event_all_day">All Day Event</string>
    <string name="event_repeated">Repeated</string>
    <string name="eservices_form">E-service Form</string>
    <string name="locations_no_locations">There are no locations</string>
    <string name="organizer_no_organizers">There are no organizers.</string>
    <string name="contact_us_done">Your data sent successfully .</string>

    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="ago">Ago</string>
    <string name="news_no_status">There are no Status</string>
    <string name="error_player">Can\'t Play This Video</string>
    <string name="eservices_no_eservices">There are no E-services.</string>
    <string name="location">Locations</string>
    <string name="organizers">Organizers</string>
</resources>
