<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/layout_dark_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_bg"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/news_filter_padding">


        <!-- Location & City -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/news_filter_padding"
            android:paddingRight="@dimen/news_filter_padding">

            <!--location name-->
            <TextView
                android:id="@+id/txtv_location_filter_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/filter_location_name"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--from value-->
            <EditText
                android:id="@+id/txtv_location_filter_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:cursorVisible="true"
                android:hint="@string/hint_name"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:layout_marginBottom="@dimen/news_filter_padding" />

            <!--Location name-->
            <TextView
                android:id="@+id/txtv_location_filter_city_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/filter_city"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--city value-->
            <Spinner
                android:id="@+id/spn_city_filter_city_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/hint_city"
                android:maxLines="1"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size" />
        </LinearLayout>

        <!--types title-->
        <TextView
            android:id="@+id/txtv_location_filter_type_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/news_filter_padding"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:text="@string/filter_location_type"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size"
            android:textStyle="bold" />

        <!--types input-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_filter_screen_recycler_height"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/news_filter_padding">

            <TextView
                android:id="@+id/txtv_noData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/gallery_item_text_size"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/locationTypesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </android.support.v7.widget.RecyclerView>

            <CheckBox
                android:id="@+id/chkbox_type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:drawableLeft="@drawable/check_box"
                android:text="@string/news_filter_all_types"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chkbox_type2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:drawableLeft="@drawable/check_box"
                android:text="@string/news_filter_economic_type"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chkbox_type3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:drawableLeft="@drawable/check_box"
                android:text="@string/news_filter_political_type"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chkbox_type4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:button="@null"
                android:drawableLeft="@drawable/check_box"
                android:text="@string/news_filter_public_type"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:visibility="gone" />
        </LinearLayout>
        <!--total capacity title-->
        <TextView
            android:id="@+id/txtv_news_filter_time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/news_filter_padding"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:text="@string/filter_total_capacity"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size"
            android:textStyle="bold" />

        <!-- Total Capacity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/news_filter_padding"
            android:paddingRight="@dimen/news_filter_padding">

            <!--location name-->
            <TextView
                android:id="@+id/txtv_location_filter_capacity_from_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/filter_time_from"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--from value-->
            <EditText
                android:id="@+id/txtv_location_filter_capacity_from_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:cursorVisible="true"
                android:hint="@string/filter_time_from"
                android:inputType="number"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:layout_marginBottom="@dimen/news_filter_padding"/>

            <!--to-->
            <TextView
                android:id="@+id/txtv_location_filter_capacity_to_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/filter_time_to"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--to value-->
            <EditText
                android:id="@+id/txtv_location_filter_capacity_to_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:cursorVisible="true"
                android:hint="@string/filter_time_to"
                android:inputType="number"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size" />

        </LinearLayout>

        <!--apply button-->

        <Button
            android:id="@+id/btn_applyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:background="@color/secb_orange"
            android:text="@string/filters_apply_filter"
            android:textAllCaps="false"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size" />


        <!--Clear Filters button-->

        <TextView
            android:id="@+id/btn_clearFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/filters_clear_filter"
            android:textAllCaps="false"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size" />


    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="2.3dp"
        android:layout_above="@+id/filter_container"
        android:background="#aa000000"
        android:clickable="true"
        android:visibility="visible" />

</RelativeLayout><!--
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">



    </ScrollView>-->
