<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:id="@+id/layout_dark_layer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:background="#aa000000"
        android:visibility="invisible"
        android:orientation="vertical"></LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="2.3dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/filter_container"
        android:visibility="visible"
        android:background="#aa000000"></View>

    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/filter_bg"
        android:orientation="vertical"
        android:clickable="true"
        android:padding="@dimen/news_filter_padding">

        <!--city input-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/news_filter_padding"
            android:paddingRight="@dimen/news_filter_padding">
            <!--city title-->
            <TextView
                android:id="@+id/txtv_event_filter_city_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/filter_city"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--city value-->
            <Spinner
                android:id="@+id/spn_city_filter_city_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size"
                android:visibility="visible"/>

        </TableRow>

        <!--time input-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/news_filter_padding"
            android:paddingRight="@dimen/news_filter_padding">
            <!--from title-->
            <TextView
                android:id="@+id/txtv_event_filter_time_from_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/filter_time_starts"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--from value-->
            <!--android:drawableLeft="@drawable/date_picker_icon"-->
            <TextView
                android:id="@+id/txtv_news_filter_time_from_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text=""

                android:hint="@string/filter_time_from"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/news_filter_padding"
            android:paddingRight="@dimen/news_filter_padding">

            <!--to-->
            <TextView
                android:id="@+id/txtv_event_filter_time_to_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/filter_time_ends"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/news_filter_text_size" />

            <!--to value-->
            <!--android:drawableLeft="@drawable/date_picker_icon"-->
            <TextView
                android:id="@+id/txtv_news_filter_time_to_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text=""

                android:hint="@string/filter_time_to"
                android:textColor="@color/secb_grey_text"
                android:textSize="@dimen/news_filter_text_size" />
        </TableRow>


        <!--types title-->
        <TextView
            android:id="@+id/txtv_news_filter_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:text="@string/filter_category"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size"
            android:textStyle="bold" />

        <!--types input-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_filter_screen_recycler_height"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/news_filter_padding">
            <TextView
                android:id="@+id/txtv_noData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="@color/secb_dark_text"
                android:textSize="@dimen/gallery_item_text_size"
                android:visibility="visible"
                android:gravity="center"
                android:text="@string/loading"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/eventsCategoriesRecyclerView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>



        </LinearLayout>

        <!--apply button-->

        <Button
            android:id="@+id/btn_applyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/news_filter_padding"
            android:background="@color/secb_orange"
            android:text="@string/filters_apply_filter"
            android:textAllCaps="false"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size" />


        <!--Clear Filters button-->

        <TextView
            android:id="@+id/btn_clearFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filters_clear_filter"
            android:textAllCaps="false"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/secb_light_text"
            android:textSize="@dimen/news_filter_btn_text_size"/>


    </LinearLayout>
</LinearLayout>
